<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="350dp">

    <TextView
        android:id="@+id/textViewSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewEpisode"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/textViewSeason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <NumberPicker
        android:id="@+id/seasonNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/episodeNumberPicker"
        app:layout_constraintTop_toBottomOf="@id/textViewSeason"
        android:layout_marginTop="16dp">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/episodeNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/seasonNumberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEpisode"
        android:layout_marginTop="16dp">

    </NumberPicker>

    <TextView
        android:id="@+id/saveEpisodeSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>