<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/showsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Shows"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoutButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:paddingBottom="8dp"/>

    <ImageView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logout_button"
        app:layout_constraintStart_toEndOf="@+id/showsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/sleepGroupShows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iconSleepShow,fallenAsleepShowTextView,fallenAsleepShowTextView2"/>

    <ImageView
        android:id="@+id/iconSleepShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_sleep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showsTextView"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/fallenAsleepShowTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconSleepShow"
        android:text="@string/fallen_asleep"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/fallenAsleepShowTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fallenAsleepShowTextView"
        android:text="@string/refresh"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/showsTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>