<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.kuglll.shows_mark.dataClasses.DataViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <include
        layout="@layout/toolbar"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/noCommentsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="icon_comments,noCommentsText"/>

        <ImageView
            android:id="@+id/icon_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_placehoder_comments"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <TextView
            android:id="@+id/noCommentsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_text"
            android:textColor="@color/greyText"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_comments"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/commentEdittext"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:layout_margin="24dp" />

        <EditText
            android:id="@+id/commentEdittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_comment"
            android:background="@drawable/rectangle_comment"
            android:layout_margin="16dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/postComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@color/pink"
            android:textSize="14sp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>