<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.kuglll.shows_mark.dataClasses.DataViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <include
            layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_dislike"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toStartOf="@+id/likesCount"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <TextView
            android:id="@+id/likesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{Integer.toString(viewmodel.likesCount)}"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_like"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@id/likesCount"/>

        <TextView
            android:id="@+id/showDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/greyText"
            android:textSize="16sp"
            android:text="@{viewmodel.showDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dislike"
            android:layout_margin="24dp"/>

        <TextView
            android:id="@+id/episodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/episodes"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/showDescriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingBottom="20dp"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sleepGroupEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="iconSleep,fallenAsleepTextView,fallenAsleepTextView2"/>

        <ImageView
            android:id="@+id/iconSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_sleep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodes"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/fallenAsleepTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconSleep"
            android:text="@string/fallen_asleep"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/fallenAsleepTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fallenAsleepTextView"
            android:text="@string/add_episodes"
            android:textColor="@color/pink"
            android:textSize="15sp"
            android:textAlignment="center"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodes"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="24dp"
            android:src="@drawable/add_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>